--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <ul>
 	<li>
-		<a href="/somar">Somar changed</a>
+		<a href="/somar">Somar</a>
 	</li>
 	<li>
 		<a href="/subtrair">Subtrair</a>
